objects/SML_Batch_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SML Batch Logs</relationshipLabel>
        <relationshipName>SML_Batch_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>While Initialzing Data</fullName>
                </value>
                <value>
                    <fullName>While Remvoing Deleted References</fullName>
                </value>
                <value>
                    <fullName>While Updating SML Data from Quotes</fullName>
                </value>
                <value>
                    <fullName>While Updating SML Data from Orders</fullName>
                </value>
                <value>
                    <fullName>While Updating competitor info</fullName>
                </value>
                <value>
                    <fullName>While Calculating engagement score</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Descripiton__c</fullName>
        <label>Error Descripiton</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>SML Batch Log</label>
    <listViews>
        <fullName>While_running_batch</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Action_Type__c</columns>
        <columns>Error_Descripiton__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action_Type__c</field>
            <operation>equals</operation>
            <value>While running batch</value>
        </filters>
        <label>While running batch</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SML Batch Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SML Batch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>